# Automated_Video_Editing

./: CMakeLists.txt  README.md
lib/: Clip.h  ClipDecoder.h  ClipEncoder.h  LinkedListAPI.h  OutputContext.h  OutputContextStructures.h  Sequence.h  SequenceDecoder.h  SequenceEncoder.h  Timebase.h  Util.h  VideoContext.h
lib/FFmpeg/: CMakeLists.txt
